# vyos-onecontext

./: .gitignore  README.md  SUMMARY.md  justfile  pyproject.toml  test_manual.py  vyatta-postconfig-bootup.script  vyatta-vmcontext.sh  vyos-postconfig-bootup.script  vyos-vmcontext.sh
.ai/context/: commit-conventions.md  feedback-loop.md  pr-comment-handling.md  quality-commands.md  review-checklist.md  worktree-workflow.md
.claude/agents/: vyos-integration-tester.md  vyos-pr-reviewer.md  vyos-script-developer.md  vyos-syntax-reviewer.md
.github/: copilot-instructions.md  test-mapping.yml
.github/agents/: developer.agent.md  reviewer.agent.md
.github/instructions/: python.instructions.md  shell.instructions.md
.github/scripts/: select-fixtures.py
.github/workflows/: ci.yml
docs/: context-reference.md  design.md  relay-design.md  relay-requirements.md
docs/optimization/: combine-test-scenarios-design.md
docs/orchestrator/: orchestrator-prompt.md
packer/: test-image-diagnostic.pkr.hcl  test-image.pkr.hcl
packer/files/: vyos-postconfig-bootup.script
packer/scripts/: diagnose-dns.sh
scripts/: vyos-onecontext-boot.sh
src/vyos_onecontext/: __init__.py  __main__.py  errors.py  parser.py  wrapper.py
tests/: __init__.py  conftest.py  test_errors.py  test_generators.py  test_integration_fixtures.py  test_main.py  test_main_error_handling.py  test_models.py  test_parser.py  test_parser_error_handling.py  test_placeholder.py  test_relay_generator.py  test_relay_models.py  test_smoke.py  test_ssh_integration.py  test_validation_helpers.py  test_validation_security.py  test_vxlan_generator.py  test_vxlan_models.py  test_wrapper.py  validation_helpers.py  validation_helpers_rebuild.py
tests/fixtures/: full_featured.env  nat_gateway.env  simple_router.env
tests/integration/: GROUP-TESTING.md  README.md  test_ssh_key  (+9 more)
(+45 files in other folders)
